--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Start Existing Project</title>
+      <title>SHL Game Center</title>
+      <link rel="icon" type="image/png" href="/src/assets/ef7a448215cdd68d2e9ae4cbdbdc19de31acb560.png" />
+      <link rel="apple-touch-icon" href="/src/assets/ef7a448215cdd68d2e9ae4cbdbdc19de31acb560.png" />
     </head>
 
     <body>
