--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SHL Game Center</title>
     
-    <link rel="icon" type="image/png" href="/src/assets/ef7a448215cdd68d2e9ae4cbdbdc19de31acb560.png?v=2" />
+    <link rel="icon" type="image/png" href="/shl-logo.png" />
   </head>
 
   <body>
